Added polygon background to banner. Added code picture to second picture in featured section.

--- a/html5up-strongly-typed/index.html
+++ b/html5up-strongly-typed/index.html
@@ -75,7 +75,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/inlineBlock.ScreenShot.png" alt="" /></a>
 										<header>
 											<h3>Great Ideas with inline-block</h3>
 										</header>
