Added image for third featured section.

--- a/html5up-strongly-typed/index.html
+++ b/html5up-strongly-typed/index.html
@@ -87,7 +87,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/caspar-camille-rubin-unsplash.jpg" alt="" /></a>
 										<header>
 											<h3>Responsive Great Ideas webpage</h3>
 										</header>
