added github links to featured section. Aerial tree view picture is not showing completely.

--- a/html5up-strongly-typed/index.html
+++ b/html5up-strongly-typed/index.html
@@ -56,14 +56,14 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Ladies and Gentlemen, behold!</h2>
+							<h2>Ladies and Gentlemen, behold my latest work!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
 
 								<!-- Feature -->
 									<section>
-										<a href="https://codepen.io/michelle-rh/pen/rNNYNXJ" target="_blank" class="image featured"><img src="images/ui-i-bakery-cookies.png" alt="" /></a>
+										<a href="https://codepen.io/michelle-rh/pen/rNNYNXJ" target="_blank" class="image featured"><img src="images/ui-i-bakery-cookies.png" alt="Image of stacked chocolate chip cookies" /></a>
 										<header>
 											<h3>Sweet Eats Bakery</h3>
 										</header>
@@ -75,9 +75,9 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/inlineBlock.ScreenShot.png" alt="" /></a>
+										<a href="https://github.com/rhmichelle/User-Interface/tree/Michelle-Harrison" target="_blank" class="image featured"><img src="images/inlineBlock.ScreenShot.png" alt="Image of a code snippet" /></a>
 										<header>
-											<h3>Great Ideas with inline-block</h3>
+											<h3>This is a Great Idea!</h3>
 										</header>
 										<p>This was the first foray into the Great Ideas webpage. My task was to lay it out using inline-blocks.
 									</section>
@@ -87,9 +87,9 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/caspar-camille-rubin-unsplash.jpg" alt="" /></a>
+										<a href="https://github.com/rhmichelle/responsive-web-design-I/tree/michelle-harrison" target="_blank" class="image featured"><img src="images/caspar-camille-rubin-unsplash.jpg" alt="Image of a cellphone with internet code on the screen" /></a>
 										<header>
-											<h3>Responsive Great Ideas webpage</h3>
+											<h3>A Great Idea gone responsive</h3>
 										</header>
 										<p>This is the Great Ideas webpage Reponsive version. It was made using Flexbox and Media Queries.</p>
 									</section>
@@ -344,7 +344,7 @@
 					</div>
 					<div id="copyright" class="container">
 						<ul class="links">
-							<li>&copy; Michelle Rodriguez-Harrison. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Michelle Rodriguez-Harrison. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Phone with code Picture by: Caspar Camille Rubin on Unsplash</li>
 						</ul>
 					</div>
 				</section>
