Removed height from image.feature class. Featured section is now being called Recent section. Added recent class to top three pictures. Aerial tree scenery picture is now fixed.

--- a/html5up-strongly-typed/index.html
+++ b/html5up-strongly-typed/index.html
@@ -63,7 +63,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="https://codepen.io/michelle-rh/pen/rNNYNXJ" target="_blank" class="image featured"><img src="images/ui-i-bakery-cookies.png" alt="Image of stacked chocolate chip cookies" /></a>
+										<a href="https://codepen.io/michelle-rh/pen/rNNYNXJ" target="_blank" class="image featured recent"><img src="images/ui-i-bakery-cookies.png" alt="Image of stacked chocolate chip cookies" /></a>
 										<header>
 											<h3>Sweet Eats Bakery</h3>
 										</header>
@@ -75,7 +75,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="https://github.com/rhmichelle/User-Interface/tree/Michelle-Harrison" target="_blank" class="image featured"><img src="images/inlineBlock.ScreenShot.png" alt="Image of a code snippet" /></a>
+										<a href="https://github.com/rhmichelle/User-Interface/tree/Michelle-Harrison" target="_blank" class="image featured recent"><img src="images/inlineBlock.ScreenShot.png" alt="Image of a code snippet" /></a>
 										<header>
 											<h3>This is a Great Idea!</h3>
 										</header>
@@ -87,7 +87,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="https://github.com/rhmichelle/responsive-web-design-I/tree/michelle-harrison" target="_blank" class="image featured"><img src="images/caspar-camille-rubin-unsplash.jpg" alt="Image of a cellphone with internet code on the screen" /></a>
+										<a href="https://github.com/rhmichelle/responsive-web-design-I/tree/michelle-harrison" target="_blank" class="image featured recent"><img src="images/caspar-camille-rubin-unsplash.jpg" alt="Image of a cellphone with internet code on the screen" /></a>
 										<header>
 											<h3>A Great Idea gone responsive</h3>
 										</header>
