changed button below Recent work to link to github profile.

--- a/html5up-strongly-typed/index.html
+++ b/html5up-strongly-typed/index.html
@@ -97,7 +97,7 @@
 							</div>
 							<div class="col-12">
 								<ul class="actions">
-									<li><a href="#" class="button icon solid fa-file">Tell Me More</a></li>
+									<li><a href="https://github.com/rhmichelle" target="_blank" class="button icon solid fa-file">See more of my work</a></li>
 								</ul>
 							</div>
 						</div>
