Added words to About me section. Filled in some posts.

--- a/html5up-strongly-typed/index.html
+++ b/html5up-strongly-typed/index.html
@@ -125,22 +125,13 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2><a href="#">I don’t want to say <strong>it’s the aliens</strong> ...<br />
-												but it’s the aliens.</a></h2>
+												<h2><a href="#">The <strong>woman</strong> behind the work</h2>
 											</header>
 											<a href="#" class="image featured"><img src="images/aaron-burden-unsplash.jpg" alt="" /></a>
-											<h3>I mean isn't it possible?</h3>
-											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-											mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-											Curabitur leo nibh, rutrum eu malesuada in tristique.</p>
+											<h3>A little bit about me</h3>
+											<p>I am Fullstack Web Development student at Lambda School and my expected graduation date is April 2021. I currently live in Fort Wayne, IN., but will be moving to Grand Rapids, MI. in October 2020. I have experience with HTML and CSS, including Flexbox. I am currently learning CSS Grid and LESS.</p>
 											<ul class="actions">
-												<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
+												<!-- <li><a href="#" class="button icon solid fa-file">Continue Reading</a></li> -->
 											</ul>
 										</article>
 
@@ -189,7 +180,7 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">July 30</span>
+																<span class="date">Week 3</span>
 																<h3><a href="#">Just another post</a></h3>
 															</header>
 															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
@@ -202,11 +193,10 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">July 28</span>
+																<span class="date">Week 2</span>
 																<h3><a href="#">And another post</a></h3>
 															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
+															<p>It was a LIE! The first week is there to trick you into complacency!!!! Just jokes! I am getting used to having a set schedule so I've fallen a bit behind, but will be catching up this weekend. Flexbox is great and makes layouts a lot easier. I'll be learning CSS Grid on my own time.</p>
 														</article>
 
 												</li>
@@ -215,11 +205,10 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">July 24</span>
+																<span class="date">Week 1</span>
 																<h3><a href="#">One more post</a></h3>
 															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
+															<p>I have prior experience with HTML and CSS so this week was pretty simple. Just some work with semantic HTML tags and basic CSS. Working with the command line and using Github was the hardest part. It gives me confidence that I can do this!</p>
 														</article>
 
 												</li>
