Finished post section with first 2 weeks

--- a/html5up-strongly-typed/index.html
+++ b/html5up-strongly-typed/index.html
@@ -180,11 +180,10 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">Week 3</span>
-																<h3><a href="#">Just another post</a></h3>
+																<!-- <span class="date">Week 3</span> -->
+																<h3><a href="#">Feelings by the week</a></h3>
 															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
+															<p>This is where I post a brief commentary on my weeks at Lambda.</p>
 														</article>
 
 												</li>
@@ -194,9 +193,9 @@
 														<article class="box excerpt">
 															<header>
 																<span class="date">Week 2</span>
-																<h3><a href="#">And another post</a></h3>
+																<h3><a href="#">I'ma keep running cause a winner don't quit on themselves -Beyonce</a></h3>
 															</header>
-															<p>It was a LIE! The first week is there to trick you into complacency!!!! Just jokes! I am getting used to having a set schedule so I've fallen a bit behind, but will be catching up this weekend. Flexbox is great and makes layouts a lot easier. I'll be learning CSS Grid on my own time.</p>
+															<p>It was a LIE! The first week is there to trick you into complacency!!!!<br> Just JOKES! I am getting used to having a set schedule so I've fallen a bit behind, but will be catching up this weekend. Flexbox is great and makes layouts a lot easier. I'll be learning CSS Grid on my own time.</p>
 														</article>
 
 												</li>
@@ -206,7 +205,7 @@
 														<article class="box excerpt">
 															<header>
 																<span class="date">Week 1</span>
-																<h3><a href="#">One more post</a></h3>
+																<h3><a href="#">The First week</a></h3>
 															</header>
 															<p>I have prior experience with HTML and CSS so this week was pretty simple. Just some work with semantic HTML tags and basic CSS. Working with the command line and using Github was the hardest part. It gives me confidence that I can do this!</p>
 														</article>
