Added attributes for Netlify form

--- a/html5up-strongly-typed/index.html
+++ b/html5up-strongly-typed/index.html
@@ -127,7 +127,7 @@
 											<header>
 												<h2><a href="#">The <strong>woman</strong> behind the work</h2>
 											</header>
-											<a href="#" class="image featured"><img src="images/aaron-burden-unsplash.jpg" alt="" /></a>
+											<a href="#" class="image featured"><img src="images/WebHS28 copy.jpg" alt="Picture of Michelle R Harrison" /></a>
 											<h3>A little bit about me</h3>
 											<p>I am Fullstack Web Development student at Lambda School and my expected graduation date is April 2021. I currently live in Fort Wayne, IN., but will be moving to Grand Rapids, MI. in October 2020. I have experience with HTML and CSS, including Flexbox. I am currently learning CSS Grid and LESS.</p>
 											<ul class="actions">
@@ -193,7 +193,7 @@
 														<article class="box excerpt">
 															<header>
 																<span class="date">Week 2</span>
-																<h3><a href="#">I'ma keep running cause a winner don't quit on themselves -Beyonce</a></h3>
+																<h3><a href="#">I'ma keep running 'cause a winner don't quit on themselves -Beyonce</a></h3>
 															</header>
 															<p>It was a LIE! The first week is there to trick you into complacency!!!!<br> Just JOKES! I am getting used to having a set schedule so I've fallen a bit behind, but will be catching up this weekend. Flexbox is great and makes layouts a lot easier. I'll be learning CSS Grid on my own time.</p>
 														</article>
@@ -291,9 +291,9 @@
 							</div>
 							<div class="col-6 col-12-medium">
 								<section>
-									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet
+									<!-- <p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet
 									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur
-									leo nibh, rutrum eu malesuada.</p>
+									leo nibh, rutrum eu malesuada.</p> -->
 									<div class="row">
 										<div class="col-6 col-12-small">
 											<ul class="icons">
