--- a/html5up-strongly-typed/index.html
+++ b/html5up-strongly-typed/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet"> 
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
@@ -271,22 +272,29 @@
 						<div class="row">
 							<div class="col-6 col-12-medium">
 								<section>
-									<form method="post" action="#">
+									<form action="https://send.pageclip.co/HPYABIxM7yDh53xBzakWjnTt8nEDZMIB" class="pageclip-form" method="post">
 										<div class="row gtr-50">
 											<div class="col-6 col-12-small">
 												<input name="name" placeholder="Name" type="text" />
 											</div>
 											<div class="col-6 col-12-small">
-												<input name="email" placeholder="Email" type="text" />
+												<input name="email" placeholder="Email" type="email" />
 											</div>
 											<div class="col-12">
 												<textarea name="message" placeholder="Message"></textarea>
 											</div>
 											<div class="col-12">
-												<a href="#" class="form-button-submit button icon solid fa-envelope">Send Message</a>
+												<button class="button pageclip-form__submit" type="submit">
+													<span class="form-button-submit button icon solid fa-envelope">
+														Send Message</span>
+													</button>
 											</div>
 										</div>
+
+
 									</form>
+
+
 								</section>
 							</div>
 							<div class="col-6 col-12-medium">
@@ -347,6 +355,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			<script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 	</body>
 </html>
